--- a/public/styles/mainStyle.css
+++ b/public/styles/mainStyle.css
@@ -121,3 +121,12 @@ nav li{
   width:100px;
   background-size:100% 100%;
 }
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
