--- a/public/styles/mainStyle.css
+++ b/public/styles/mainStyle.css
@@ -232,6 +232,11 @@ score-display{
   float:left;
 }
 
+.profile h3{
+  margin-top: 1px;
+  margin-bottom: 1px;
+}
+
 .max-scroll-box{
   max-height: 50vh;
   overflow: auto;
@@ -272,6 +277,28 @@ score-display{
     float:left;
     width:calc(50% - 15px);
   }
+}
+@media only screen and (max-width: 768px){
+  .profile-img-button {
+    width: 45px;
+    height:auto;
+    position:absolute;
+    top:0;
+    bottom:0;
+    right:15px;
+    margin: auto;
+  }
+
+  .well{
+    position:relative;
+  }
+
+  .well h3{
+    margin-top: 1px;
+    margin-bottom: 1px;
+  }
+
+
 }
 
 @media only screen and (min-width:768px){
