--- a/public/styles/mainStyle.css
+++ b/public/styles/mainStyle.css
@@ -13,6 +13,18 @@ html, body{
   position:relative;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.card{
+  background-color: #eee;
+  display: block;
+  padding:10px;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
 .abs-center-margin{
   position:absolute;
   top:0;
@@ -321,12 +333,29 @@ score-display{
   color:white;
 }
 
-.white.card{
+.white{
   background-color: #eee;
+}
+
+.lightblue{
+  background-color: #90c5e8;
+}
+
+.card{
   border-radius: 3px;
   margin: 5px;
   padding:5px;
 }
+
+.tag-card{
+  z-index: 100;
+  border-radius: 3px;
+  margin: 5px;
+  padding:5px;
+  background-color: #90c5e8;
+}
+
+
 
 .bronze{
   border-top:2px #cd7f32 solid;
@@ -343,14 +372,6 @@ score-display{
 
 }
 
-.card{
-  background-color: #eee;
-  display: block;
-  padding:10px;
-  margin-right: 20px;
-  margin-left: 20px;
-
-}
 
 .login-form input{
   width:80%;
@@ -386,12 +407,12 @@ score-display{
 }
 
 .vertical-expand-in.ng-enter{
-  animation-duration:1s;
+  animation-duration:.75s;
   animation-name: expandin;
 }
 
 .vertical-expand-in.ng-leave{
-  animation-duration:1s;
+  animation-duration:.75s;
   animation-name: collapsein;
 }
 
@@ -506,8 +527,8 @@ score-graph .line-legend{
   color:blue;
   font-size: 1.5em;
   position:fixed;
-  top: 60px;
-  right:60px;
+  top: -500px;
+  right:-500px;
 
 }
 
@@ -585,6 +606,9 @@ score-graph .line-legend{
 .flex1{
   flex:1;
 }
+score-display.selected-tag{
+  display:nones;
+}
 @media all and (max-width: 768px){
   .profile-img-button {
     width: 45px;
@@ -619,6 +643,19 @@ score-graph .line-legend{
     margin: 3px;
     margin-top: 2px;
     margin-bottom: 2px;
+  }
+  .tag-card{
+    position: absolute;
+    left:20px;
+    padding:20px;
+    padding: 0px 10px 10px 10px;
+  }
+  .selected-tag{
+    display:block;
+  }
+  .pic-question-btn {
+    top: 60px;
+    right: 60px;
   }
 }
 @media all and (min-width:1500px){
@@ -678,5 +715,7 @@ score-graph .line-legend{
     margin-bottom: 0px;
     max-height:0px;
     overflow:hidden;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 }
